# microflow

./: .gitignore  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  README2.md  api.md  blog.md  blog2.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
microflow/: __init__.py  event.py  manager.py
microflow/examples/: simple_agent.py  weather_assistant.py
tests/: test_event.py  test_manager.py
