[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microflow"
version = "0.1.0"
description = "A lightweight event-driven workflow system for building AI agents and processing pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vikram Soni", email = "vikram9880@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/yourusername/microflow"
"Bug Tracker" = "https://github.com/yourusername/microflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["microflow"]
